syntax = "proto3";

package gs.ext.service.user;

import "konekko.me/gosion/commons/dto/commons.proto";

service User {

    rpc isExists (ExistsRequest) returns (gs.commons.dto.Status);

}

message ExistsRequest {
    string userId = 1;
}
